--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,35 @@
 body {
-    background-color: #f0f0f0;
     font-family: Arial, sans-serif;
-}
-
-h2 {
-    color: #333;
-}
-
-#sensorData {
-    font-size: 20px;
-    color: #666;
-}
+    background-color: #f2f2f2;
+    margin: 0;
+    padding: 20px;
+  }
+  
+  h2 {
+    text-align: center;
+  }
+  
+  #sensorData {
+    background-color: #fff;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    margin: 20px auto;
+    max-width: 500px;
+  }
+  
+  table {
+    width: 100%;
+    border-collapse: collapse;
+  }
+  
+  th, td {
+    padding: 8px;
+    text-align: left;
+    border-bottom: 1px solid #ddd;
+  }
+  
+  th {
+    background-color: #f2f2f2;
+  }
+  
